# DPanel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Requirement_v1.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs_request.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  BUILDING.md  GETTING_STARTED.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compose_discovery.rs  config_graph.rs  infrastructure_graph.rs  main.rs  ssh.rs  types.rs  user_commands.rs
src/components/: ConfigGraphManager.tsx  ConnectionManager.tsx  CronManager.tsx  Dashboard.tsx  DockerEnhanced.tsx  DockerManager.tsx  FirewallManager.tsx  InfrastructureManager.tsx  LogViewer.tsx  NginxManager.tsx  QuickCommands.tsx  ServicesManager.tsx  Sidebar.tsx  TopBar.tsx  UserManager.tsx
src/components/config-graph/: ConfigDetails.tsx  ConfigGraph.tsx  ConfigNode.tsx  ConfigToolbar.tsx
src/components/infrastructure-graph/: InfraNode.tsx  InfrastructureGraphView.tsx
src/components/layout/: NavigationRail.tsx  TopBar.tsx
src/components/ui/: LoadingScreen.tsx  Skeleton.tsx
src/context/: ServerContext.tsx  ToastContext.tsx
src/hooks/: useDebouncedCallback.ts
src/lib/: icons.ts
src/styles/: animations.css  design-tokens.css  modern-theme.css
src/types/: config-graph.ts  index.ts  infrastructure-graph.ts
(+7 files in other folders)
